styles: fix title alignments

--- a/css/src/components/_layout.scss
+++ b/css/src/components/_layout.scss
@@ -15,7 +15,7 @@
     max-width: 1200px;
     min-height: 100vh;
     margin-left: 220px;
-    padding-top: 30px;
+    padding-top: 35px;
   }
 
   .footer {
